# m365-support-auditor

./: .gitignore  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: config-example.md  implementation-notes.md  roadmap.md  testing-guide.md  usage-examples.md
docs/daily-progress/: 2026-06-25.md  2026-06-27.md  2026-06-28.md  2026-06-29.md  2026-06-30.md  2026-07-01.md
src/m365_auditor/: __init__.py  auditor.py  cli.py
tests/: test_auditor.py
