[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "m365-support-auditor"
version = "0.1.0"
description = "Windows admin automation tool for auditing M365 user accounts, security policies, and license compliance"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ali Bidhendi", email = "alibidhendi2000@gmail.com" }]
keywords = ["active-directory", "m365", "security-audit", "windows-admin", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.scripts]
m365-auditor = "m365_auditor.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
